--- a/app/src/main/res/layout/activity_ecom_app.xml
+++ b/app/src/main/res/layout/activity_ecom_app.xml
@@ -25,6 +25,7 @@
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/main_bottom_bar"
+        style="@style/Widget.MaterialComponents.BottomNavigationView.Colored"
         android:layout_width="match_parent"
         android:layout_height="56dp"
         app:elevation="8dp"
