--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -16,7 +16,8 @@
             android:id="@+id/home_recycler_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+            app:spanCount="2"
             tools:listitem="@layout/item_product" />
 
         <ProgressBar
@@ -24,8 +25,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:visibility="gone"
-            tools:visibility="visible" />
+            android:visibility="gone" />
 
         <TextView
             android:id="@+id/tv_error"
@@ -35,8 +35,7 @@
             android:layout_centerHorizontal="true"
             android:text="@string/result_could_not_be_loaded"
             android:visibility="gone"
-            tools:text="@string/result_could_not_be_loaded"
-            tools:visibility="visible" />
+            tools:text="@string/result_could_not_be_loaded" />
 
         <Button
             android:id="@+id/btnRetry"
@@ -44,8 +43,7 @@
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:text="@string/retry"
-            android:visibility="gone"
-            tools:visibility="visible" />
+            android:visibility="gone" />
 
         <TextView
             android:id="@+id/tvNoResult"
