--- a/app/src/main/res/menu/main_app_menu.xml
+++ b/app/src/main/res/menu/main_app_menu.xml
@@ -2,18 +2,22 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/homeFragment"
+        android:contentDescription="@string/app_name"
         android:icon="@drawable/ic_baseline_home_24"
         android:title="@string/home" />
     <item
         android:id="@+id/searchFragment"
+        android:contentDescription="@string/app_name"
         android:icon="@drawable/ic_baseline_search_24"
         android:title="@string/search" />
     <item
         android:id="@+id/cartFragment"
+        android:contentDescription="@string/app_name"
         android:icon="@drawable/ic_baseline_shopping_cart_24"
         android:title="@string/cart" />
     <item
         android:id="@+id/settingFragment"
+        android:contentDescription="@string/app_name"
         android:icon="@drawable/ic_baseline_settings_24"
         android:title="@string/settings" />
 
