--- a/app/src/main/res/layout/item_orders.xml
+++ b/app/src/main/res/layout/item_orders.xml
@@ -1,11 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="200dp">
+
+    <ImageView
+        android:id="@+id/iv_product_image"
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:contentDescription="@string/app_name"
+        android:src="@color/teal_700" />
 
     <TextView
-        android:id="@+id/tv_test"
-        android:layout_width="match_parent"
+        android:id="@+id/tv_status_date"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="This is test" />
-</LinearLayout>
+        android:layout_marginStart="4dp"
+        android:layout_toEndOf="@id/iv_product_image"
+        android:padding="8dp" />
+
+    <TextView
+        android:id="@+id/tv_number_of_product"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/tv_status_date"
+        android:layout_marginStart="4dp"
+        android:layout_toEndOf="@id/iv_product_image"
+        android:ellipsize="end"
+        android:maxLines="2"
+        android:padding="8dp" />
+
+    <TextView
+        android:id="@+id/tv_total"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/tv_number_of_product"
+        android:layout_marginStart="4dp"
+        android:layout_toEndOf="@id/iv_product_image"
+        android:padding="8dp" />
+
+</RelativeLayout>
