--- a/app/src/main/res/navigation/main_app_navigation.xml
+++ b/app/src/main/res/navigation/main_app_navigation.xml
@@ -28,6 +28,9 @@
         <action
             android:id="@+id/action_settingFragment_to_orderFragment"
             app:destination="@id/orderFragment" />
+        <action
+            android:id="@+id/action_settingFragment_to_profileFragment"
+            app:destination="@id/profileFragment" />
     </fragment>
     <activity
         android:id="@+id/ecomAppActivity"
@@ -38,5 +41,27 @@
         android:id="@+id/orderFragment"
         android:name="com.tcs.ecom.ui.main.setting.orders.OrderFragment"
         android:label="My Orders"
-        tools:layout="@layout/fragment_orders" />
+        tools:layout="@layout/fragment_orders">
+        <action
+            android:id="@+id/action_orderFragment_to_showOrderDetailsFragment"
+            app:destination="@id/showOrderDetailsFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/showOrderDetailsFragment"
+        android:name="com.tcs.ecom.ui.main.setting.orders.ShowOrderDetailsFragment"
+        android:label="Order Details"
+        tools:layout="@layout/fragment_order_details">
+        <argument
+            android:name="singleOrderItem"
+            app:argType="com.tcs.ecom.models.SingleOrderResponse" />
+    </fragment>
+    <dialog
+        android:id="@+id/profileFragment"
+        android:name="com.tcs.ecom.ui.main.setting.ProfileFragment"
+        android:label="My Profile"
+        tools:layout="@layout/bottom_sheet_profile">
+        <argument
+            android:name="user"
+            app:argType="com.tcs.ecom.models.Users" />
+    </dialog>
 </navigation>
