--- a/app/src/main/res/layout/bottom_sheet_profile.xml
+++ b/app/src/main/res/layout/bottom_sheet_profile.xml
@@ -49,6 +49,25 @@
         app:layout_constraintTop_toBottomOf="@+id/tv_email" />
 
     <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/et_name"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginEnd="16dp"
+        android:hint="@string/name"
+        app:errorEnabled="true"
+        app:layout_constraintTop_toBottomOf="@+id/checkbox_address">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:inputType="textPersonName"
+            android:padding="16dp" />
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/et_current_password"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
         android:layout_width="match_parent"
@@ -58,7 +77,7 @@
         android:layout_marginEnd="16dp"
         android:hint="@string/current_password"
         app:errorEnabled="true"
-        app:layout_constraintTop_toBottomOf="@+id/checkbox_address"
+        app:layout_constraintTop_toBottomOf="@+id/et_name"
         app:passwordToggleEnabled="true"
         tools:layout_editor_absoluteX="0dp">
 
