--- a/app/src/main/res/layout/item_order_details.xml
+++ b/app/src/main/res/layout/item_order_details.xml
@@ -5,6 +5,7 @@
     android:layout_height="wrap_content">
 
     <ImageView
+        android:layout_marginTop="4dp"
         android:id="@+id/iv_product_image"
         android:layout_width="match_parent"
         android:layout_height="200dp"
